--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>Vishnu Manda</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="icon" type="image/x-icon" href="assets/vishnu-b&w.png">
 </head>
 <body>
   <app-root></app-root>
